<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>net.jakobnielsen</groupId>
    <artifactId>imagga-java-kit</artifactId>
    <version>0.1-SNAPSHOT</version>
    <name>imagga-java-kit</name>
    <description>Imagga Java Kit</description>
    <url>https://github.com/lazee/imagga-java-kit</url>
    <packaging>jar</packaging>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>git@github.com:juven/git-demo.git</url>
        <connection>scm:git:git://github.com/lazee/imagga-java-kit.git</connection>
        <developerConnection>scm:git:git@github.com:lazee/imagga-java-kit.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <email>jakobvadnielsen@gmail.com</email>
            <name>Jakob Vad Nielsen</name>
            <url>https://github.com/lazee</url>
            <id>lazee</id>
        </developer>
    </developers>

    <profiles>
        <profile>
            <id>buildWithIntegrationTests</id>
            <activation>
                <property>
                    <name>env</name>
                    <value>integration</value>
                </property>
            </activation>
            <properties>
                <tests.to.exclude>do.not.exclude.any.tests</tests.to.exclude>
            </properties>
        </profile>

        <profile>
            <id>buildWithOnlyRegularTests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>env</name>
                    <value>test</value>
                </property>
            </activation>
            <properties>
                <tests.to.exclude>*IntegrationTest.java</tests.to.exclude>
            </properties>
        </profile>

    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <useManifestOnlyJar>true</useManifestOnlyJar>
                    <argLine>-Dfile.encoding=utf-8 -Xms128m -Xmx512m -XX:MaxPermSize=128m</argLine>
                    <excludes>
                        <exclude>**/${tests.to.exclude}</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.9</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>1.7.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
